--- a/wp-content/themes/impruwclientparent/css/pace.css
+++ b/wp-content/themes/impruwclientparent/css/pace.css
@@ -54,7 +54,7 @@
   top: 0;
   right: .5rem;
   content: attr(data-progress-text);
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: 'Helvetica Neue', 'Lato', sans-serif;
   font-weight: 100;
   font-size: 5rem;
   line-height: 1;
